parser/ruby.output

state 0
	$accept: .main $end 
	stmts: .    (5)

	UNARY_NUM  shift 77
	BANG  shift 20
	NIL  shift 29
	SYMBOL  shift 78
	INT  shift 86
	FLOAT  shift 87
	RATIONAL  shift 88
	IMAGINARY  shift 89
	TRUE  shift 31
	FALSE  shift 32
	CLASS  shift 56
	MODULE  shift 73
	DEF  shift 74
	IF  shift 49
	UNLESS  shift 50
	BEGIN  shift 41
	WHILE  shift 51
	RETURN  shift 65
	YIELD  shift 44
	SELF  shift 30
	CONSTANT  shift 27
	CASE  shift 53
	UNTIL  shift 52
	FOR  shift 54
	BREAK  shift 61
	NEXT  shift 62
	SUPER  shift 64
	ALIAS  shift 5
	PRIVATE  shift 17
	PROTECTED  shift 18
	IVAR  shift 25
	CVAR  shift 28
	GVAR  shift 26
	METHODIDENT  shift 46
	IDENT  shift 24
	LBRACE  shift 43
	STRINGBEG  shift 79
	REGEXBEG  shift 85
	RAWSTRINGBEG  shift 82
	WORDSBEG  shift 80
	RAWWORDSBEG  shift 83
	XSTRINGBEG  shift 81
	RAWXSTRINGBEG  shift 84
	LBRACKETSTART  shift 42
	LPARENSTART  shift 14
	LAMBDA  shift 48
	.  reduce 5 (src line 121)

	fcall  goto 45
	operation  goto 72
	string_beg  goto 69
	regex_beg  goto 71
	private  goto 9
	raw_string_beg  goto 70
	class  goto 55
	module  goto 57
	symbol  goto 68
	numeric  goto 67
	user_variable  goto 15
	keyword_variable  goto 16
	simple_numeric  goto 76
	expr  goto 10
	arg  goto 21
	primary  goto 22
	literal  goto 36
	lhs  goto 8
	var_ref  goto 40
	var_lhs  goto 11
	primary_value  goto 12
	command_asgn  goto 6
	command  goto 33
	command_call  goto 19
	regexp  goto 39
	block_command  goto 34
	block_call  goto 66
	method_call  goto 47
	stmt  goto 4
	rel_expr  goto 35
	string  goto 37
	raw_string  goto 38
	mlhs_item  goto 63
	mlhs_node  goto 75
	stmts  goto 3
	root  goto 2
	mlhs  goto 7
	mlhs_basic  goto 13
	mlhs_head  goto 23
	method_signature  goto 58
	defn_head  goto 59
	defs_head  goto 60
	main  goto 1

state 1
	$accept:  main.$end 

	$end  accept
	.  error


state 2
	main:  root.    (1)

	.  reduce 1 (src line 99)


state 3
	root:  stmts.opt_terms 
	stmts:  stmts.terms stmt 
	opt_terms: .    (352)

	COMMENT  shift 96
	NEWLINE  shift 94
	SEMICOLON  shift 93
	.  reduce 352 (src line 1866)

	term  goto 92
	comment  goto 95
	opt_terms  goto 90
	terms  goto 91

state 4
	stmts:  stmt.    (6)
	stmt:  stmt.IF_MOD expr_value 
	stmt:  stmt.UNLESS_MOD expr_value 
	stmt:  stmt.WHILE_MOD expr_value 
	stmt:  stmt.UNTIL_MOD expr_value 

	IF_MOD  shift 97
	UNLESS_MOD  shift 98
	WHILE_MOD  shift 99
	UNTIL_MOD  shift 100
	.  reduce 6 (src line 125)


state 5
	stmt:  ALIAS.fname fname 
	stmt:  ALIAS.SYMBOL SYMBOL 

	SPACESHIP  shift 111
	EQ  shift 112
	NEQ  shift 119
	MATCH  shift 113
	NOTMATCH  shift 114
	GT  shift 115
	GTE  shift 116
	LT  shift 117
	LTE  shift 118
	AND  shift 110
	PIPE  shift 108
	CARET  shift 109
	LSHIFT  shift 120
	RSHIFT  shift 121
	PLUS  shift 122
	MINUS  shift 123
	ASTERISK  shift 124
	SLASH  shift 125
	MODULO  shift 126
	POW  shift 127
	BANG  shift 128
	SYMBOL  shift 102
	CONSTANT  shift 106
	METHODIDENT  shift 107
	IDENT  shift 105
	.  error

	operation  goto 103
	op  goto 104
	fname  goto 101

state 6
	stmt:  command_asgn.    (14)

	.  reduce 14 (src line 180)


state 7
	stmt:  mlhs.ASSIGN command_call 
	stmt:  mlhs.ASSIGN mrhs_arg 

	ASSIGN  shift 129
	.  error


state 8
	stmt:  lhs.ASSIGN mrhs 
	command_asgn:  lhs.ASSIGN command_rhs 
	arg:  lhs.ASSIGN arg_rhs 

	ASSIGN  shift 130
	.  error


state 9
	stmt:  private.    (18)

	.  reduce 18 (src line 193)


state 10
	stmt:  expr.    (19)

	.  reduce 19 (src line 198)


state 11
	command_asgn:  var_lhs.op_asgn command_rhs 
	arg:  var_lhs.op_asgn arg_rhs 

	MODASSIGN  shift 132
	MULASSIGN  shift 133
	ADDASSIGN  shift 134
	SUBASSIGN  shift 135
	DIVASSIGN  shift 136
	LSHIFTASSIGN  shift 137
	RSHIFTASSIGN  shift 138
	ORASSIGN  shift 139
	.  error

	op_asgn  goto 131

state 12
	command_asgn:  primary_value.LBRACKET opt_call_args rbracket op_asgn command_rhs 
	command_asgn:  primary_value.call_op IDENT op_asgn command_rhs 
	command_asgn:  primary_value.call_op CONSTANT op_asgn command_rhs 
	command_asgn:  primary_value.SCOPE CONSTANT op_asgn command_rhs 
	command:  primary_value.call_op operation command_args 
	mlhs_node:  primary_value.LBRACKET opt_call_args rbracket 
	mlhs_node:  primary_value.call_op IDENT 
	lhs:  primary_value.LBRACKET opt_call_args rbracket 
	lhs:  primary_value.call_op IDENT 
	arg:  primary_value.LBRACKET opt_call_args rbracket op_asgn arg_rhs 
	arg:  primary_value.call_op IDENT op_asgn arg_rhs 
	arg:  primary_value.call_op CONSTANT op_asgn arg_rhs 
	arg:  primary_value.SCOPE CONSTANT op_asgn arg_rhs 
	primary:  primary_value.SCOPE CONSTANT 
	method_call:  primary_value.call_op fname opt_paren_args 
	method_call:  primary_value.LBRACKET opt_call_args rbracket 

	ANDDOT  shift 144
	DOT  shift 143
	LBRACKET  shift 140
	SCOPE  shift 142
	.  error

	call_op  goto 141

state 13
	mlhs:  mlhs_basic.    (45)

	.  reduce 45 (src line 317)


state 14
	mlhs:  LPARENSTART.mlhs_inner rparen 
	primary:  LPARENSTART.stmt rparen 

	UNARY_NUM  shift 77
	BANG  shift 20
	NIL  shift 29
	SYMBOL  shift 78
	INT  shift 86
	FLOAT  shift 87
	RATIONAL  shift 88
	IMAGINARY  shift 89
	TRUE  shift 31
	FALSE  shift 32
	CLASS  shift 56
	MODULE  shift 73
	DEF  shift 74
	IF  shift 49
	UNLESS  shift 50
	BEGIN  shift 41
	WHILE  shift 51
	RETURN  shift 65
	YIELD  shift 44
	SELF  shift 30
	CONSTANT  shift 27
	CASE  shift 53
	UNTIL  shift 52
	FOR  shift 54
	BREAK  shift 61
	NEXT  shift 62
	SUPER  shift 64
	ALIAS  shift 5
	PRIVATE  shift 17
	PROTECTED  shift 18
	IVAR  shift 25
	CVAR  shift 28
	GVAR  shift 26
	METHODIDENT  shift 46
	IDENT  shift 24
	LBRACE  shift 43
	STRINGBEG  shift 79
	REGEXBEG  shift 85
	RAWSTRINGBEG  shift 82
	WORDSBEG  shift 80
	RAWWORDSBEG  shift 83
	XSTRINGBEG  shift 81
	RAWXSTRINGBEG  shift 84
	LBRACKETSTART  shift 42
	LPARENSTART  shift 148
	LAMBDA  shift 48
	.  error

	fcall  goto 45
	operation  goto 72
	string_beg  goto 69
	regex_beg  goto 71
	private  goto 9
	raw_string_beg  goto 70
	class  goto 55
	module  goto 57
	symbol  goto 68
	numeric  goto 67
	user_variable  goto 15
	keyword_variable  goto 16
	simple_numeric  goto 76
	expr  goto 10
	arg  goto 21
	primary  goto 22
	literal  goto 36
	lhs  goto 8
	var_ref  goto 40
	var_lhs  goto 11
	primary_value  goto 12
	command_asgn  goto 6
	command  goto 33
	command_call  goto 19
	regexp  goto 39
	block_command  goto 34
	block_call  goto 66
	method_call  goto 47
	stmt  goto 146
	rel_expr  goto 35
	string  goto 37
	raw_string  goto 38
	mlhs_item  goto 63
	mlhs_node  goto 75
	mlhs  goto 7
	mlhs_basic  goto 147
	mlhs_head  goto 23
	mlhs_inner  goto 145
	method_signature  goto 58
	defn_head  goto 59
	defs_head  goto 60

state 15
	mlhs_node:  user_variable.    (55)
	lhs:  user_variable.    (59)
	var_ref:  user_variable.    (298)
	var_lhs:  user_variable.    (300)

	ASSIGN  reduce 59 (src line 381)
	MODASSIGN  reduce 300 (src line 1628)
	MULASSIGN  reduce 300 (src line 1628)
	ADDASSIGN  reduce 300 (src line 1628)
	SUBASSIGN  reduce 300 (src line 1628)
	DIVASSIGN  reduce 300 (src line 1628)
	LSHIFTASSIGN  reduce 300 (src line 1628)
	RSHIFTASSIGN  reduce 300 (src line 1628)
	ORASSIGN  reduce 300 (src line 1628)
	COMMA  reduce 55 (src line 365)
	.  reduce 298 (src line 1627)


state 16
	mlhs_node:  keyword_variable.    (56)
	lhs:  keyword_variable.    (60)
	var_ref:  keyword_variable.    (299)
	var_lhs:  keyword_variable.    (301)

	ASSIGN  reduce 60 (src line 383)
	MODASSIGN  reduce 301 (src line 1628)
	MULASSIGN  reduce 301 (src line 1628)
	ADDASSIGN  reduce 301 (src line 1628)
	SUBASSIGN  reduce 301 (src line 1628)
	DIVASSIGN  reduce 301 (src line 1628)
	LSHIFTASSIGN  reduce 301 (src line 1628)
	RSHIFTASSIGN  reduce 301 (src line 1628)
	ORASSIGN  reduce 301 (src line 1628)
	COMMA  reduce 56 (src line 366)
	.  reduce 299 (src line 1627)


state 17
	private:  PRIVATE.    (377)

	.  reduce 377 (src line 1904)


state 18
	private:  PROTECTED.    (378)

	.  reduce 378 (src line 1906)


state 19
	expr:  command_call.    (28)

	.  reduce 28 (src line 247)


state 20
	expr:  BANG.command_call 
	arg:  BANG.arg 

	UNARY_NUM  shift 77
	BANG  shift 154
	NIL  shift 29
	SYMBOL  shift 78
	INT  shift 86
	FLOAT  shift 87
	RATIONAL  shift 88
	IMAGINARY  shift 89
	TRUE  shift 31
	FALSE  shift 32
	CLASS  shift 56
	MODULE  shift 73
	DEF  shift 74
	IF  shift 49
	UNLESS  shift 50
	BEGIN  shift 41
	WHILE  shift 51
	RETURN  shift 65
	YIELD  shift 44
	SELF  shift 30
	CONSTANT  shift 27
	CASE  shift 53
	UNTIL  shift 52
	FOR  shift 54
	BREAK  shift 61
	NEXT  shift 62
	SUPER  shift 64
	IVAR  shift 25
	CVAR  shift 28
	GVAR  shift 26
	METHODIDENT  shift 46
	IDENT  shift 24
	LBRACE  shift 43
	STRINGBEG  shift 79
	REGEXBEG  shift 85
	RAWSTRINGBEG  shift 82
	WORDSBEG  shift 80
	RAWWORDSBEG  shift 83
	XSTRINGBEG  shift 81
	RAWXSTRINGBEG  shift 84
	LBRACKETSTART  shift 42
	LPARENSTART  shift 157
	LAMBDA  shift 48
	.  error

	fcall  goto 45
	operation  goto 72
	string_beg  goto 69
	regex_beg  goto 71
	raw_string_beg  goto 70
	class  goto 55
	module  goto 57
	symbol  goto 68
	numeric  goto 67
	user_variable  goto 155
	keyword_variable  goto 156
	simple_numeric  goto 76
	arg  goto 150
	primary  goto 22
	literal  goto 36
	lhs  goto 151
	var_ref  goto 40
	var_lhs  goto 152
	primary_value  goto 153
	command  goto 33
	command_call  goto 149
	regexp  goto 39
	block_command  goto 34
	block_call  goto 66
	method_call  goto 47
	rel_expr  goto 35
	string  goto 37
	raw_string  goto 38
	method_signature  goto 58
	defn_head  goto 59
	defs_head  goto 60

state 21
	expr:  arg.    (30)
	arg:  arg.DOT2 arg 
	arg:  arg.DOT3 arg 
	arg:  arg.DOT2 
	arg:  arg.DOT3 
	arg:  arg.PLUS arg 
	arg:  arg.MINUS arg 
	arg:  arg.ASTERISK arg 
	arg:  arg.SLASH arg 
	arg:  arg.MODULO arg 
	arg:  arg.POW arg 
	arg:  arg.PIPE arg 
	arg:  arg.CARET arg 
	arg:  arg.AND arg 
	arg:  arg.SPACESHIP arg 
	arg:  arg.EQ arg 
	arg:  arg.NEQ arg 
	arg:  arg.MATCH arg 
	arg:  arg.NOTMATCH arg 
	arg:  arg.LSHIFT arg 
	arg:  arg.RSHIFT arg 
	arg:  arg.LOGICALAND arg 
	arg:  arg.LOGICALOR arg 
	arg:  arg.QMARK arg opt_nl COLON arg 
	rel_expr:  arg.relop arg 

	QMARK  shift 178
	DOT2  shift 158
	DOT3  shift 159
	LOGICALOR  shift 177
	LOGICALAND  shift 176
	SPACESHIP  shift 169
	EQ  shift 170
	NEQ  shift 171
	MATCH  shift 172
	NOTMATCH  shift 173
	GT  shift 180
	GTE  shift 182
	LT  shift 181
	LTE  shift 183
	AND  shift 168
	PIPE  shift 166
	CARET  shift 167
	LSHIFT  shift 174
	RSHIFT  shift 175
	PLUS  shift 160
	MINUS  shift 161
	ASTERISK  shift 162
	SLASH  shift 163
	MODULO  shift 164
	POW  shift 165
	.  reduce 30 (src line 253)

	relop  goto 179

 22: reduce/reduce conflict  (red'ns 123 and 198) on ANDDOT
 22: reduce/reduce conflict  (red'ns 123 and 198) on DOT
 22: reduce/reduce conflict  (red'ns 123 and 198) on LBRACKET
 22: reduce/reduce conflict  (red'ns 123 and 198) on SCOPE
state 22
	arg:  primary.    (123)
	primary_value:  primary.    (198)

	.  reduce 123 (src line 620)


state 23
	mlhs_basic:  mlhs_head.    (49)
	mlhs_basic:  mlhs_head.mlhs_item 
	mlhs_basic:  mlhs_head.ASTERISK mlhs_node 
	mlhs_head:  mlhs_head.mlhs_item COMMA 

	ASTERISK  shift 185
	UNARY_NUM  shift 77
	NIL  shift 29
	SYMBOL  shift 78
	INT  shift 86
	FLOAT  shift 87
	RATIONAL  shift 88
	IMAGINARY  shift 89
	TRUE  shift 31
	FALSE  shift 32
	CLASS  shift 56
	MODULE  shift 73
	DEF  shift 74
	IF  shift 49
	UNLESS  shift 50
	BEGIN  shift 41
	WHILE  shift 51
	YIELD  shift 190
	SELF  shift 30
	CONSTANT  shift 27
	CASE  shift 53
	UNTIL  shift 52
	FOR  shift 54
	BREAK  shift 61
	NEXT  shift 62
	SUPER  shift 192
	IVAR  shift 25
	CVAR  shift 28
	GVAR  shift 26
	METHODIDENT  shift 46
	IDENT  shift 24
	LBRACE  shift 43
	STRINGBEG  shift 79
	REGEXBEG  shift 85
	RAWSTRINGBEG  shift 82
	WORDSBEG  shift 80
	RAWWORDSBEG  shift 83
	XSTRINGBEG  shift 81
	RAWXSTRINGBEG  shift 84
	LBRACKETSTART  shift 42
	LPARENSTART  shift 157
	LAMBDA  shift 48
	.  reduce 49 (src line 331)

	fcall  goto 191
	operation  goto 72
	string_beg  goto 69
	regex_beg  goto 71
	raw_string_beg  goto 70
	class  goto 55
	module  goto 57
	symbol  goto 68
	numeric  goto 67
	user_variable  goto 186
	keyword_variable  goto 187
	simple_numeric  goto 76
	primary  goto 189
	literal  goto 36
	var_ref  goto 40
	primary_value  goto 188
	regexp  goto 39
	method_call  goto 47
	string  goto 37
	raw_string  goto 38
	mlhs_item  goto 184
	mlhs_node  goto 75
	method_signature  goto 58
	defn_head  goto 59
	defs_head  goto 60

 24: reduce/reduce conflict  (red'ns 289 and 347) on ASTERISK
 24: reduce/reduce conflict  (red'ns 289 and 347) on DO
 24: reduce/reduce conflict  (red'ns 289 and 347) on LBRACEBLOCK
state 24
	user_variable:  IDENT.    (289)
	operation:  IDENT.    (347)

	UNARY_NUM  reduce 347 (src line 1862)
	BANG  reduce 347 (src line 1862)
	NIL  reduce 347 (src line 1862)
	SYMBOL  reduce 347 (src line 1862)
	INT  reduce 347 (src line 1862)
	FLOAT  reduce 347 (src line 1862)
	RATIONAL  reduce 347 (src line 1862)
	IMAGINARY  reduce 347 (src line 1862)
	TRUE  reduce 347 (src line 1862)
	FALSE  reduce 347 (src line 1862)
	CLASS  reduce 347 (src line 1862)
	MODULE  reduce 347 (src line 1862)
	DEF  reduce 347 (src line 1862)
	IF  reduce 347 (src line 1862)
	UNLESS  reduce 347 (src line 1862)
	BEGIN  reduce 347 (src line 1862)
	WHILE  reduce 347 (src line 1862)
	YIELD  reduce 347 (src line 1862)
	SELF  reduce 347 (src line 1862)
	CONSTANT  reduce 347 (src line 1862)
	CASE  reduce 347 (src line 1862)
	UNTIL  reduce 347 (src line 1862)
	FOR  reduce 347 (src line 1862)
	BREAK  reduce 347 (src line 1862)
	NEXT  reduce 347 (src line 1862)
	SUPER  reduce 347 (src line 1862)
	IVAR  reduce 347 (src line 1862)
	CVAR  reduce 347 (src line 1862)
	GVAR  reduce 347 (src line 1862)
	METHODIDENT  reduce 347 (src line 1862)
	IDENT  reduce 347 (src line 1862)
	LABEL  reduce 347 (src line 1862)
	LBRACE  reduce 347 (src line 1862)
	DOUBLESPLAT  reduce 347 (src line 1862)
	STRINGBEG  reduce 347 (src line 1862)
	REGEXBEG  reduce 347 (src line 1862)
	RAWSTRINGBEG  reduce 347 (src line 1862)
	WORDSBEG  reduce 347 (src line 1862)
	RAWWORDSBEG  reduce 347 (src line 1862)
	XSTRINGBEG  reduce 347 (src line 1862)
	RAWXSTRINGBEG  reduce 347 (src line 1862)
	LBRACKETSTART  reduce 347 (src line 1862)
	LPAREN  reduce 347 (src line 1862)
	LPARENSTART  reduce 347 (src line 1862)
	LAMBDA  reduce 347 (src line 1862)
	.  reduce 289 (src line 1582)


state 25
	user_variable:  IVAR.    (290)

	.  reduce 290 (src line 1587)


state 26
	user_variable:  GVAR.    (291)

	.  reduce 291 (src line 1596)


 27: reduce/reduce conflict  (red'ns 292 and 348) on ASTERISK
 27: reduce/reduce conflict  (red'ns 292 and 348) on DO
 27: reduce/reduce conflict  (red'ns 292 and 348) on LBRACEBLOCK
state 27
	user_variable:  CONSTANT.    (292)
	operation:  CONSTANT.    (348)

	UNARY_NUM  reduce 348 (src line 1862)
	BANG  reduce 348 (src line 1862)
	NIL  reduce 348 (src line 1862)
	SYMBOL  reduce 348 (src line 1862)
	INT  reduce 348 (src line 1862)
	FLOAT  reduce 348 (src line 1862)
	RATIONAL  reduce 348 (src line 1862)
	IMAGINARY  reduce 348 (src line 1862)
	TRUE  reduce 348 (src line 1862)
	FALSE  reduce 348 (src line 1862)
	CLASS  reduce 348 (src line 1862)
	MODULE  reduce 348 (src line 1862)
	DEF  reduce 348 (src line 1862)
	IF  reduce 348 (src line 1862)
	UNLESS  reduce 348 (src line 1862)
	BEGIN  reduce 348 (src line 1862)
	WHILE  reduce 348 (src line 1862)
	YIELD  reduce 348 (src line 1862)
	SELF  reduce 348 (src line 1862)
	CONSTANT  reduce 348 (src line 1862)
	CASE  reduce 348 (src line 1862)
	UNTIL  reduce 348 (src line 1862)
	FOR  reduce 348 (src line 1862)
	BREAK  reduce 348 (src line 1862)
	NEXT  reduce 348 (src line 1862)
	SUPER  reduce 348 (src line 1862)
	IVAR  reduce 348 (src line 1862)
	CVAR  reduce 348 (src line 1862)
	GVAR  reduce 348 (src line 1862)
	METHODIDENT  reduce 348 (src line 1862)
	IDENT  reduce 348 (src line 1862)
	LABEL  reduce 348 (src line 1862)
	LBRACE  reduce 348 (src line 1862)
	DOUBLESPLAT  reduce 348 (src line 1862)
	STRINGBEG  reduce 348 (src line 1862)
	REGEXBEG  reduce 348 (src line 1862)
	RAWSTRINGBEG  reduce 348 (src line 1862)
	WORDSBEG  reduce 348 (src line 1862)
	RAWWORDSBEG  reduce 348 (src line 1862)
	XSTRINGBEG  reduce 348 (src line 1862)
	RAWXSTRINGBEG  reduce 348 (src line 1862)
	LBRACKETSTART  reduce 348 (src line 1862)
	LPAREN  reduce 348 (src line 1862)
	LPARENSTART  reduce 348 (src line 1862)
	LAMBDA  reduce 348 (src line 1862)
	.  reduce 292 (src line 1600)


state 28
	user_variable:  CVAR.    (293)

	.  reduce 293 (src line 1604)


state 29
	keyword_variable:  NIL.    (294)

	.  reduce 294 (src line 1609)


state 30
	keyword_variable:  SELF.    (295)

	.  reduce 295 (src line 1614)


state 31
	keyword_variable:  TRUE.    (296)

	.  reduce 296 (src line 1618)


state 32
	keyword_variable:  FALSE.    (297)

	.  reduce 297 (src line 1622)


state 33
	command_call:  command.    (34)
	block_call:  command.do_block 

	DO_BLOCK  shift 194
	.  reduce 34 (src line 267)

	do_block  goto 193

state 34
	command_call:  block_command.    (35)

	.  reduce 35 (src line 269)


state 35
	arg:  rel_expr.    (112)
	rel_expr:  rel_expr.relop arg 

	GT  shift 180
	GTE  shift 182
	LT  shift 181
	LTE  shift 183
	.  reduce 112 (src line 571)

	relop  goto 195

state 36
	primary:  literal.    (158)

	.  reduce 158 (src line 769)


state 37
	primary:  string.    (159)

	.  reduce 159 (src line 771)


state 38
	primary:  raw_string.    (160)

	.  reduce 160 (src line 772)


state 39
	primary:  regexp.    (161)

	.  reduce 161 (src line 773)


state 40
	primary:  var_ref.    (162)

	.  reduce 162 (src line 780)


state 41
	primary:  BEGIN.compstmt opt_rescue opt_ensure END 
	stmts: .    (5)

	UNARY_NUM  shift 77
	BANG  shift 20
	NIL  shift 29
	SYMBOL  shift 78
	INT  shift 86
	FLOAT  shift 87
	RATIONAL  shift 88
	IMAGINARY  shift 89
	TRUE  shift 31
	FALSE  shift 32
	CLASS  shift 56
	MODULE  shift 73
	DEF  shift 74
	IF  shift 49
	UNLESS  shift 50
	BEGIN  shift 41
	WHILE  shift 51
	RETURN  shift 65
	YIELD  shift 44
	SELF  shift 30
	CONSTANT  shift 27
	CASE  shift 53
	UNTIL  shift 52
	FOR  shift 54
	BREAK  shift 61
	NEXT  shift 62
	SUPER  shift 64
	ALIAS  shift 5
	PRIVATE  shift 17
	PROTECTED  shift 18
	IVAR  shift 25
	CVAR  shift 28
	GVAR  shift 26
	METHODIDENT  shift 46
	IDENT  shift 24
	LBRACE  shift 43
	STRINGBEG  shift 79
	REGEXBEG  shift 85
	RAWSTRINGBEG  shift 82
	WORDSBEG  shift 80
	RAWWORDSBEG  shift 83
	XSTRINGBEG  shift 81
	RAWXSTRINGBEG  shift 84
	LBRACKETSTART  shift 42
	LPARENSTART  shift 14
	LAMBDA  shift 48
	.  reduce 5 (src line 121)

	fcall  goto 45
	operation  goto 72
	string_beg  goto 69
	regex_beg  goto 71
	private  goto 9
	raw_string_beg  goto 70
	class  goto 55
	module  goto 57
	symbol  goto 68
	numeric  goto 67
	user_variable  goto 15
	keyword_variable  goto 16
	simple_numeric  goto 76
	expr  goto 10
	arg  goto 21
	primary  goto 22
	literal  goto 36
	lhs  goto 8
	var_ref  goto 40
	var_lhs  goto 11
	primary_value  goto 12
	command_asgn  goto 6
	command  goto 33
	command_call  goto 19
	regexp  goto 39
	block_command  goto 34
	block_call  goto 66
	method_call  goto 47
	stmt  goto 4
	rel_expr  goto 35
	string  goto 37
	raw_string  goto 38
	mlhs_item  goto 63
	mlhs_node  goto 75
	compstmt  goto 196
	stmts  goto 197
	mlhs  goto 7
	mlhs_basic  goto 13
	mlhs_head  goto 23
	method_signature  goto 58
	defn_head  goto 59
	defs_head  goto 60

state 42
	primary:  LBRACKETSTART.aref_args rbracket 
	aref_args: .    (131)

	ASTERISK  shift 201
	UNARY_NUM  shift 77
	BANG  shift 154
	NIL  shift 29
	SYMBOL  shift 78
	INT  shift 86
	FLOAT  shift 87
	RATIONAL  shift 88
	IMAGINARY  shift 89
	TRUE  shift 31
	FALSE  shift 32
	CLASS  shift 56
	MODULE  shift 73
	DEF  shift 74
	IF  shift 49
	UNLESS  shift 50
	BEGIN  shift 41
	WHILE  shift 51
	YIELD  shift 190
	SELF  shift 30
	CONSTANT  shift 27
	CASE  shift 53
	UNTIL  shift 52
	FOR  shift 54
	BREAK  shift 61
	NEXT  shift 62
	SUPER  shift 192
	IVAR  shift 25
	CVAR  shift 28
	GVAR  shift 26
	METHODIDENT  shift 46
	IDENT  shift 24
	LBRACE  shift 43
	STRINGBEG  shift 79
	REGEXBEG  shift 85
	RAWSTRINGBEG  shift 82
	WORDSBEG  shift 80
	RAWWORDSBEG  shift 83
	XSTRINGBEG  shift 81
	RAWXSTRINGBEG  shift 84
	LBRACKETSTART  shift 42
	LPARENSTART  shift 157
	LAMBDA  shift 48
	.  reduce 131 (src line 636)

	fcall  goto 191
	operation  goto 72
	string_beg  goto 69
	regex_beg  goto 71
	raw_string_beg  goto 70
	class  goto 55
	module  goto 57
	symbol  goto 68
	numeric  goto 67
	user_variable  goto 155
	keyword_variable  goto 156
	simple_numeric  goto 76
	arg  goto 202
	primary  goto 22
	literal  goto 36
	lhs  goto 151
	var_ref  goto 40
	var_lhs  goto 152
	primary_value  goto 203
	regexp  goto 39
	arg_value  goto 200
	method_call  goto 47
	rel_expr  goto 35
	string  goto 37
	raw_string  goto 38
	args  goto 199
	aref_args  goto 198
	method_signature  goto 58
	defn_head  goto 59
	defs_head  goto 60

state 43
	primary:  LBRACE.assoc_list RBRACE 
	assoc_list: .    (340)

	UNARY_NUM  shift 77
	BANG  shift 154
	NIL  shift 29
	SYMBOL  shift 78
	INT  shift 86
	FLOAT  shift 87
	RATIONAL  shift 88
	IMAGINARY  shift 89
	TRUE  shift 31
	FALSE  shift 32
	CLASS  shift 56
	MODULE  shift 73
	DEF  shift 74
	IF  shift 49
	UNLESS  shift 50
	BEGIN  shift 41
	WHILE  shift 51
	YIELD  shift 190
	SELF  shift 30
	CONSTANT  shift 27
	CASE  shift 53
	UNTIL  shift 52
	FOR  shift 54
	BREAK  shift 61
	NEXT  shift 62
	SUPER  shift 192
	IVAR  shift 25
	CVAR  shift 28
	GVAR  shift 26
	METHODIDENT  shift 46
	IDENT  shift 24
	LABEL  shift 208
	LBRACE  shift 43
	DOUBLESPLAT  shift 209
	STRINGBEG  shift 79
	REGEXBEG  shift 85
	RAWSTRINGBEG  shift 82
	WORDSBEG  shift 80
	RAWWORDSBEG  shift 83
	XSTRINGBEG  shift 81
	RAWXSTRINGBEG  shift 84
	LBRACKETSTART  shift 42
	LPARENSTART  shift 157
	LAMBDA  shift 48
	.  reduce 340 (src line 1832)

	fcall  goto 191
	operation  goto 72
	string_beg  goto 69
	regex_beg  goto 71
	raw_string_beg  goto 70
	class  goto 55
	module  goto 57
	symbol  goto 68
	numeric  goto 67
	user_variable  goto 155
	keyword_variable  goto 156
	simple_numeric  goto 76
	arg  goto 202
	primary  goto 22
	literal  goto 36
	lhs  goto 151
	var_ref  goto 40
	var_lhs  goto 152
	primary_value  goto 203
	regexp  goto 39
	arg_value  goto 207
	method_call  goto 47
	rel_expr  goto 35
	string  goto 37
	raw_string  goto 38
	method_signature  goto 58
	defn_head  goto 59
	defs_head  goto 60
	assoc  goto 206
	assocs  goto 205
	assoc_list  goto 204

 44: reduce/reduce conflict  (red'ns 170 and 153) on ASTERISK
state 44
	command:  YIELD.command_args 
	primary:  YIELD.LPAREN call_args rparen 
	primary:  YIELD.LPAREN rparen 
	primary:  YIELD.    (170)
	$$153: .    (153)

	ASTERISK  reduce 153 (src line 736)
	UNARY_NUM  reduce 153 (src line 736)
	BANG  reduce 153 (src line 736)
	NIL  reduce 153 (src line 736)
	SYMBOL  reduce 153 (src line 736)
	INT  reduce 153 (src line 736)
	FLOAT  reduce 153 (src line 736)
	RATIONAL  reduce 153 (src line 736)
	IMAGINARY  reduce 153 (src line 736)
	TRUE  reduce 153 (src line 736)
	FALSE  reduce 153 (src line 736)
	CLASS  reduce 153 (src line 736)
	MODULE  reduce 153 (src line 736)
	DEF  reduce 153 (src line 736)
	IF  reduce 153 (src line 736)
	UNLESS  reduce 153 (src line 736)
	BEGIN  reduce 153 (src line 736)
	WHILE  reduce 153 (src line 736)
	YIELD  reduce 153 (src line 736)
	SELF  reduce 153 (src line 736)
	CONSTANT  reduce 153 (src line 736)
	CASE  reduce 153 (src line 736)
	UNTIL  reduce 153 (src line 736)
	FOR  reduce 153 (src line 736)
	BREAK  reduce 153 (src line 736)
	NEXT  reduce 153 (src line 736)
	SUPER  reduce 153 (src line 736)
	IVAR  reduce 153 (src line 736)
	CVAR  reduce 153 (src line 736)
	GVAR  reduce 153 (src line 736)
	METHODIDENT  reduce 153 (src line 736)
	IDENT  reduce 153 (src line 736)
	LABEL  reduce 153 (src line 736)
	LBRACE  reduce 153 (src line 736)
	DOUBLESPLAT  reduce 153 (src line 736)
	STRINGBEG  reduce 153 (src line 736)
	REGEXBEG  reduce 153 (src line 736)
	RAWSTRINGBEG  reduce 153 (src line 736)
	WORDSBEG  reduce 153 (src line 736)
	RAWWORDSBEG  reduce 153 (src line 736)
	XSTRINGBEG  reduce 153 (src line 736)
	RAWXSTRINGBEG  reduce 153 (src line 736)
	LBRACKETSTART  reduce 153 (src line 736)
	LPAREN  shift 211
	LPARENSTART  reduce 153 (src line 736)
	LAMBDA  reduce 153 (src line 736)
	.  reduce 170 (src line 819)

	command_args  goto 210
	$$153  goto 212

state 45
	command:  fcall.command_args 
	command:  fcall.command_args brace_block 
	primary:  fcall.brace_block 
	method_call:  fcall.paren_args 
	$$153: .    (153)

	DO  shift 217
	LBRACEBLOCK  shift 216
	LPAREN  shift 218
	.  reduce 153 (src line 736)

	paren_args  goto 215
	command_args  goto 213
	brace_block  goto 214
	$$153  goto 212

 46: reduce/reduce conflict  (red'ns 172 and 349) on ASTERISK
 46: reduce/reduce conflict  (red'ns 172 and 349) on DO
 46: reduce/reduce conflict  (red'ns 172 and 349) on LBRACEBLOCK
state 46
	primary:  METHODIDENT.    (172)
	operation:  METHODIDENT.    (349)
